Added mega showdown compat

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -4,8 +4,14 @@
   "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
   "feature.cobblemonraiddens.default": "Regular",
   "feature.cobblemonraiddens.dynamax": "Dynamax",
+  "feature.cobblemonraiddens.gigantamax": "Gigantamax",
+  "feature.cobblemonraiddens.eternamax": "Eternamax",
   "feature.cobblemonraiddens.mega": "Mega",
+  "feature.cobblemonraiddens.mega_x": "Mega X",
+  "feature.cobblemonraiddens.mega_y": "Mega Y",
+  "feature.cobblemonraiddens.primal": "Primal",
   "feature.cobblemonraiddens.tera": "Tera",
+  "feature.cobblemonraiddens.stellar": "Stellar",
   "item.cobblemonraiddens.raid_pouch": "Raid Pouch",
   "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
   "message.cobblemonraiddens.raid.accepted_request": "Your request has been accepted.",
