Added dimension removal admin command

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -2,6 +2,8 @@
   "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
   "block.cobblemonraiddens.raid_home_block": "Raid Den Crystal",
   "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
+  "error.cobblemonraiddens.invalid_dimension": "Invalid dimension.",
+  "error.cobblemonraiddens.players_in_dimension": "There are still players in that dimension.",
   "feature.cobblemonraiddens.default": "Regular",
   "feature.cobblemonraiddens.dynamax": "Dynamax",
   "feature.cobblemonraiddens.gigantamax": "Gigantamax",
@@ -20,6 +22,8 @@
   "message.cobblemonraiddens.raid.already_participating": "You are already participating in another raid.",
   "message.cobblemonraiddens.raid.confirm_accept_request": "You have accepted the join request.",
   "message.cobblemonraiddens.raid.confirm_deny_request": "You have rejected the join request.",
+  "message.cobblemonraiddens.raid.forbidden_item": "You cannot use items in a raid battle.",
+  "message.cobblemonraiddens.raid.forbidden_move": "%s cannot be selected in a raid battle.",
   "message.cobblemonraiddens.raid.has_fainted": "You have already fainted!",
   "message.cobblemonraiddens.raid.is_not_active": "The raid den is not active right now.",
   "message.cobblemonraiddens.raid.lobby_is_full": "This lobby is already full!",
