--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -4,6 +4,7 @@
   "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
   "error.cobblemonraiddens.invalid_dimension": "Invalid dimension.",
   "error.cobblemonraiddens.players_in_dimension": "There are still players in that dimension.",
+  "error.cobblemonraiddens.dimension_exist": "You are already hosting another raid. If this is an error, please contact an admin.",
   "feature.cobblemonraiddens.default": "Regular",
   "feature.cobblemonraiddens.dynamax": "Dynamax",
   "feature.cobblemonraiddens.gigantamax": "Gigantamax",
