Added custom raid statistics

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -41,8 +41,18 @@
   "message.cobblemonraiddens.raid.request_to_join": "%s has requested to join the raid.",
   "message.cobblemonraiddens.reward.already_received_reward": "You have already claimed the rewards.",
   "message.cobblemonraiddens.reward.reward_item": "You have received the reward!",
-  "message.cobblemonraiddens.reward.reward_not_pokeball": "Please select a Pokeball.",
+  "message.cobblemonraiddens.reward.reward_not_pokeball": "You need to hold a Pokeball to claim the Pokemon.",
   "message.cobblemonraiddens.reward.reward_pokemon": "You have received the Pokemon!",
+  "stat.cobblemonraiddens.raids_hosted": "Raid Dens Hosted",
+  "stat.cobblemonraiddens.raids_joined": "Raid Dens Joined",
+  "stat.cobblemonraiddens.raids_completed": "Raid Dens Completed",
+  "stat.cobblemonraiddens.tier_one_completed": "Tier One Raids Completed",
+  "stat.cobblemonraiddens.tier_two_completed": "Tier Two Raids Completed",
+  "stat.cobblemonraiddens.tier_three_completed": "Tier Three Raids Completed",
+  "stat.cobblemonraiddens.tier_four_completed": "Tier Four Raids Completed",
+  "stat.cobblemonraiddens.tier_five_completed": "Tier Five Raids Completed",
+  "stat.cobblemonraiddens.tier_six_completed": "Tier Six Raids Completed",
+  "stat.cobblemonraiddens.tier_seven_completed": "Tier Seven Raids Completed",
   "tag.item.cobblemonraiddens.raid_den_keys": "Raid Den Key",
   "text.autoconfig.cobbleraiddens-client.title": "Cobblemon Raid Dens Config",
   "text.autoconfig.cobbleraiddens-client.option.show_beam": "Show Beacon Beam"
