--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -55,5 +55,11 @@
   "stat.cobblemonraiddens.tier_seven_completed": "Tier Seven Raids Completed",
   "tag.item.cobblemonraiddens.raid_den_keys": "Raid Den Key",
   "text.autoconfig.cobbleraiddens-client.title": "Cobblemon Raid Dens Config",
-  "text.autoconfig.cobbleraiddens-client.option.show_beam": "Show Beacon Beam"
+  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_one": "Tier One Beacon",
+  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_two": "Tier Two Beacon",
+  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_three": "Tier Three Beacon",
+  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_four": "Tier Four Beacon",
+  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_five": "Tier Five Beacon",
+  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_six": "Tier Six Beacon",
+  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_seven": "Tier Seven Beacon"
 }
