Added custom advancements

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -1,4 +1,28 @@
 {
+  "advancement.cobblemonraiddens.join_raid.title": "Cobblemon Raid Dens",
+  "advancement.cobblemonraiddens.join_raid.description": "Join your first raid.",
+  "advancement.cobblemonraiddens.raid_dynamax.title": "A Dynamax Adventure",
+  "advancement.cobblemonraiddens.raid_dynamax.description": "Defeat a dynamax raid.",
+  "advancement.cobblemonraiddens.raid_mega.title": "Overflowing With Power",
+  "advancement.cobblemonraiddens.raid_mega.description": "Defeat a mega raid.",
+  "advancement.cobblemonraiddens.raid_shiny.title": "A Sparkling Success",
+  "advancement.cobblemonraiddens.raid_shiny.description": "Receive a shiny from a raid.",
+  "advancement.cobblemonraiddens.raid_tera.title": "The Treasure of Area Zero",
+  "advancement.cobblemonraiddens.raid_tera.description": "Defeat a tera raid.",
+  "advancement.cobblemonraiddens.tier_one.title": "First Steps",
+  "advancement.cobblemonraiddens.tier_one.description": "Defeat a tier one raid.",
+  "advancement.cobblemonraiddens.tier_two.title": "Raid Buddy",
+  "advancement.cobblemonraiddens.tier_two.description": "Defeat a tier two raid.",
+  "advancement.cobblemonraiddens.tier_three.title": "A Formidable Foe",
+  "advancement.cobblemonraiddens.tier_three.description": "Defeat a tier three raid.",
+  "advancement.cobblemonraiddens.tier_four.title": "Raid Veteran",
+  "advancement.cobblemonraiddens.tier_four.description": "Defeat a tier four raid.",
+  "advancement.cobblemonraiddens.tier_five.title": "Raid Master",
+  "advancement.cobblemonraiddens.tier_five.description": "Defeat a tier five raid.",
+  "advancement.cobblemonraiddens.tier_six.title": "Even Further Beyond",
+  "advancement.cobblemonraiddens.tier_six.description": "Defeat a tier six raid.",
+  "advancement.cobblemonraiddens.tier_seven.title": "The Mightiest",
+  "advancement.cobblemonraiddens.tier_seven.description": "Defeat a tier seven raid.",
   "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
   "block.cobblemonraiddens.raid_home_block": "Raid Den Crystal",
   "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
