--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -41,6 +41,9 @@
   "feature.cobblemonraiddens.stellar": "Stellar",
   "item.cobblemonraiddens.raid_pouch": "Raid Pouch",
   "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
+  "message.cobblemonraiddens.command.refresh_player": "%s has been refreshed.",
+  "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
+  "message.cobblemonraiddens.command.remove_dimension": "Rain dimension has been removed.",
   "message.cobblemonraiddens.raid.accepted_request": "Your request has been accepted.",
   "message.cobblemonraiddens.raid.already_hosting": "You are already hosting another raid.",
   "message.cobblemonraiddens.raid.already_in_queue": "You are already waiting to join a raid.",
