Added cheer items

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -40,6 +40,9 @@
   "feature.cobblemonraiddens.tera": "Tera",
   "feature.cobblemonraiddens.stellar": "Stellar",
   "item.cobblemonraiddens.raid_pouch": "Raid Pouch",
+  "item.cobblemonraiddens.cheer_attack": "Attack Cheer",
+  "item.cobblemonraiddens.cheer_defense": "Defense Cheer",
+  "item.cobblemonraiddens.cheer_heal": "Heal Cheer",
   "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
   "message.cobblemonraiddens.command.refresh_player": "%s has been refreshed.",
   "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
