Improved cheering and added stat resetting

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -23,8 +23,12 @@
   "advancement.cobblemonraiddens.tier_six.description": "Defeat a tier six raid.",
   "advancement.cobblemonraiddens.tier_seven.title": "The Mightiest",
   "advancement.cobblemonraiddens.tier_seven.description": "Defeat a tier seven raid.",
+  "battle.cobblemonraiddens.cheer.cheer_attack": "%1$s cheered with \"Go All Out!\"",
+  "battle.cobblemonraiddens.cheer.cheer_defense": "%1$s cheered with \"Hang tough!\"",
+  "battle.cobblemonraiddens.cheer.cheer_heal": "%1$s cheered with \"Heal up!\"",
   "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
   "block.cobblemonraiddens.raid_home_block": "Raid Den Crystal",
+  "cobblemon.battle.heal.bagitemcheerheal": "%1$s restored HP from the Heal Cheer!",
   "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
   "error.cobblemonraiddens.invalid_dimension": "Invalid dimension.",
   "error.cobblemonraiddens.players_in_dimension": "There are still players in that dimension.",
