Fixed and improved stat resetting

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -26,6 +26,8 @@
   "battle.cobblemonraiddens.cheer.cheer_attack": "%1$s cheered with \"Go All Out!\"",
   "battle.cobblemonraiddens.cheer.cheer_defense": "%1$s cheered with \"Hang tough!\"",
   "battle.cobblemonraiddens.cheer.cheer_heal": "%1$s cheered with \"Heal up!\"",
+  "battle.cobblemonraiddens.reset.boss": "%1$s cleared its own negative effects!",
+  "battle.cobblemonraiddens.reset.player": "%1$s cleared your positive stat changes!",
   "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
   "block.cobblemonraiddens.raid_home_block": "Raid Den Crystal",
   "cobblemon.battle.heal.bagitemcheerheal": "%1$s restored HP from the Heal Cheer!",
