Minor improvements and fixes to cheers

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -23,9 +23,9 @@
   "advancement.cobblemonraiddens.tier_six.description": "Defeat a tier six raid.",
   "advancement.cobblemonraiddens.tier_seven.title": "The Mightiest",
   "advancement.cobblemonraiddens.tier_seven.description": "Defeat a tier seven raid.",
-  "battle.cobblemonraiddens.cheer.cheer_attack": "%1$s cheered with \"Go All Out!\"",
-  "battle.cobblemonraiddens.cheer.cheer_defense": "%1$s cheered with \"Hang tough!\"",
-  "battle.cobblemonraiddens.cheer.cheer_heal": "%1$s cheered with \"Heal up!\"",
+  "battle.cobblemonraiddens.cheer.cheer_attack": "%1$s cheered with \"Go All Out\"!",
+  "battle.cobblemonraiddens.cheer.cheer_defense": "%1$s cheered with \"Hang tough\"!",
+  "battle.cobblemonraiddens.cheer.cheer_heal": "%1$s cheered with \"Heal up\"!",
   "battle.cobblemonraiddens.reset.boss": "%1$s cleared its own negative effects!",
   "battle.cobblemonraiddens.reset.player": "%1$s cleared your positive stat changes!",
   "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
@@ -46,9 +46,13 @@
   "feature.cobblemonraiddens.tera": "Tera",
   "feature.cobblemonraiddens.stellar": "Stellar",
   "item.cobblemonraiddens.raid_pouch": "Raid Pouch",
+  "item.cobblemonraiddens.cheer.tooltip": "Can only be used in Raid Battles",
   "item.cobblemonraiddens.cheer_attack": "Attack Cheer",
+  "item.cobblemonraiddens.cheer_attack.tooltip": "Raise your party's Atk and Sp. Atk by one stage",
   "item.cobblemonraiddens.cheer_defense": "Defense Cheer",
+  "item.cobblemonraiddens.cheer_defense.tooltip": "Raise your party's Def and Sp. Def by one stage",
   "item.cobblemonraiddens.cheer_heal": "Heal Cheer",
+  "item.cobblemonraiddens.cheer_heal.tooltip": "Restores 30% HP for your party",
   "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
   "message.cobblemonraiddens.command.refresh_player": "%s has been refreshed.",
   "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
