Added cheer advancement

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+  "advancement.cobblemonraiddens.great_friend.title": "The Great Friend",
+  "advancement.cobblemonraiddens.great_friend.description": "Use one of each Cheer.",
   "advancement.cobblemonraiddens.join_raid.title": "Cobblemon Raid Dens",
   "advancement.cobblemonraiddens.join_raid.description": "Join your first raid.",
   "advancement.cobblemonraiddens.raid_dynamax.title": "A Dynamax Adventure",
