Added dimension check to refresh command

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -1,108 +1,109 @@
 {
-  "advancement.cobblemonraiddens.great_friend.title": "The Great Friend",
-  "advancement.cobblemonraiddens.great_friend.description": "Use one of each Cheer.",
-  "advancement.cobblemonraiddens.join_raid.title": "Cobblemon Raid Dens",
-  "advancement.cobblemonraiddens.join_raid.description": "Join your first raid.",
-  "advancement.cobblemonraiddens.raid_dynamax.title": "A Dynamax Adventure",
-  "advancement.cobblemonraiddens.raid_dynamax.description": "Defeat a dynamax raid.",
-  "advancement.cobblemonraiddens.raid_mega.title": "Overflowing With Power",
-  "advancement.cobblemonraiddens.raid_mega.description": "Defeat a mega raid.",
-  "advancement.cobblemonraiddens.raid_shiny.title": "A Sparkling Success",
-  "advancement.cobblemonraiddens.raid_shiny.description": "Receive a shiny from a raid.",
-  "advancement.cobblemonraiddens.raid_tera.title": "The Treasure of Area Zero",
-  "advancement.cobblemonraiddens.raid_tera.description": "Defeat a tera raid.",
-  "advancement.cobblemonraiddens.tier_one.title": "First Steps",
-  "advancement.cobblemonraiddens.tier_one.description": "Defeat a tier one raid.",
-  "advancement.cobblemonraiddens.tier_two.title": "Raid Buddy",
-  "advancement.cobblemonraiddens.tier_two.description": "Defeat a tier two raid.",
-  "advancement.cobblemonraiddens.tier_three.title": "A Formidable Foe",
-  "advancement.cobblemonraiddens.tier_three.description": "Defeat a tier three raid.",
-  "advancement.cobblemonraiddens.tier_four.title": "Raid Veteran",
-  "advancement.cobblemonraiddens.tier_four.description": "Defeat a tier four raid.",
-  "advancement.cobblemonraiddens.tier_five.title": "Raid Master",
-  "advancement.cobblemonraiddens.tier_five.description": "Defeat a tier five raid.",
-  "advancement.cobblemonraiddens.tier_six.title": "Even Further Beyond",
-  "advancement.cobblemonraiddens.tier_six.description": "Defeat a tier six raid.",
-  "advancement.cobblemonraiddens.tier_seven.title": "The Mightiest",
-  "advancement.cobblemonraiddens.tier_seven.description": "Defeat a tier seven raid.",
-  "battle.cobblemonraiddens.cheer.cannot": "You have no more cheers left.",
-  "battle.cobblemonraiddens.cheer.cheer_attack": "%1$s cheered with \"Go All Out\"!",
-  "battle.cobblemonraiddens.cheer.cheer_defense": "%1$s cheered with \"Hang tough\"!",
-  "battle.cobblemonraiddens.cheer.cheer_heal": "%1$s cheered with \"Heal up\"!",
-  "battle.cobblemonraiddens.reset.boss": "%1$s cleared its own negative effects!",
-  "battle.cobblemonraiddens.reset.player": "%1$s cleared your positive stat changes!",
-  "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
-  "block.cobblemonraiddens.raid_home_block": "Raid Den Crystal",
-  "cobblemon.battle.heal.bagitemcheerheal": "%1$s restored HP from the Heal Cheer!",
-  "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
-  "error.cobblemonraiddens.invalid_dimension": "Invalid dimension.",
-  "error.cobblemonraiddens.players_in_dimension": "There are still players in that dimension.",
-  "error.cobblemonraiddens.dimension_exist": "You are already hosting another raid. If this is an error, please contact an admin.",
-  "feature.cobblemonraiddens.default": "Regular",
-  "feature.cobblemonraiddens.dynamax": "Dynamax",
-  "feature.cobblemonraiddens.gigantamax": "Gigantamax",
-  "feature.cobblemonraiddens.eternamax": "Eternamax",
-  "feature.cobblemonraiddens.mega": "Mega",
-  "feature.cobblemonraiddens.mega_x": "Mega X",
-  "feature.cobblemonraiddens.mega_y": "Mega Y",
-  "feature.cobblemonraiddens.primal": "Primal",
-  "feature.cobblemonraiddens.tera": "Tera",
-  "feature.cobblemonraiddens.stellar": "Stellar",
-  "item.cobblemonraiddens.raid_pouch": "Raid Pouch",
-  "item.cobblemonraiddens.cheer.tooltip": "Can only be used in Raid Battles",
-  "item.cobblemonraiddens.cheer_attack": "Attack Cheer",
-  "item.cobblemonraiddens.cheer_attack.tooltip": "Raise your party's Atk and Sp. Atk by one stage",
-  "item.cobblemonraiddens.cheer_defense": "Defense Cheer",
-  "item.cobblemonraiddens.cheer_defense.tooltip": "Raise your party's Def and Sp. Def by one stage",
-  "item.cobblemonraiddens.cheer_heal": "Heal Cheer",
-  "item.cobblemonraiddens.cheer_heal.tooltip": "Restores 50% HP for your party",
-  "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
-  "message.cobblemonraiddens.command.refresh_player": "%s has been refreshed.",
-  "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
-  "message.cobblemonraiddens.command.remove_dimension": "Rain dimension has been removed.",
-  "message.cobblemonraiddens.raid.accepted_request": "Your request has been accepted.",
-  "message.cobblemonraiddens.raid.already_hosting": "You are already hosting another raid.",
-  "message.cobblemonraiddens.raid.already_in_queue": "You are already waiting to join a raid.",
-  "message.cobblemonraiddens.raid.already_participating": "You are already participating in another raid.",
-  "message.cobblemonraiddens.raid.confirm_accept_request": "You have accepted the join request.",
-  "message.cobblemonraiddens.raid.confirm_deny_request": "You have rejected the join request.",
-  "message.cobblemonraiddens.raid.forbidden_item": "You cannot use items in a raid battle.",
-  "message.cobblemonraiddens.raid.forbidden_move": "%s cannot be selected in a raid battle.",
-  "message.cobblemonraiddens.raid.has_fainted": "You have already fainted!",
-  "message.cobblemonraiddens.raid.is_not_active": "The raid den is not active right now.",
-  "message.cobblemonraiddens.raid.lobby_is_full": "This lobby is already full!",
-  "message.cobblemonraiddens.raid.not_participating": "You have not registered for the raid. Leave and rejoin the lobby.",
-  "message.cobblemonraiddens.raid.player_cleared": "You have already cleared this raid.",
-  "message.cobblemonraiddens.raid.raid_catch": " [CATCH]",
-  "message.cobblemonraiddens.raid.raid_fail": "The raid boss was too strong!",
-  "message.cobblemonraiddens.raid.raid_leave": " [LEAVE]",
-  "message.cobblemonraiddens.raid.raid_success": "You have successfully defeated the raid boss!",
-  "message.cobblemonraiddens.raid.rejected_request": "%s has rejected your join request.",
-  "message.cobblemonraiddens.raid.request_accept": " [ACCEPT]",
-  "message.cobblemonraiddens.raid.request_deny": " [DENY]",
-  "message.cobblemonraiddens.raid.request_time_out": "The join request has timed out.",
-  "message.cobblemonraiddens.raid.request_to_join": "%s has requested to join the raid.",
-  "message.cobblemonraiddens.reward.already_received_reward": "You have already claimed the rewards.",
-  "message.cobblemonraiddens.reward.reward_item": "You have received the reward!",
-  "message.cobblemonraiddens.reward.reward_not_pokeball": "You need to hold a Pokeball to claim the Pokemon.",
-  "message.cobblemonraiddens.reward.reward_pokemon": "You have received the Pokemon!",
-  "stat.cobblemonraiddens.raids_hosted": "Raid Dens Hosted",
-  "stat.cobblemonraiddens.raids_joined": "Raid Dens Joined",
-  "stat.cobblemonraiddens.raids_completed": "Raid Dens Completed",
-  "stat.cobblemonraiddens.tier_one_completed": "Tier One Raids Completed",
-  "stat.cobblemonraiddens.tier_two_completed": "Tier Two Raids Completed",
-  "stat.cobblemonraiddens.tier_three_completed": "Tier Three Raids Completed",
-  "stat.cobblemonraiddens.tier_four_completed": "Tier Four Raids Completed",
-  "stat.cobblemonraiddens.tier_five_completed": "Tier Five Raids Completed",
-  "stat.cobblemonraiddens.tier_six_completed": "Tier Six Raids Completed",
-  "stat.cobblemonraiddens.tier_seven_completed": "Tier Seven Raids Completed",
-  "tag.item.cobblemonraiddens.raid_den_keys": "Raid Den Key",
-  "text.autoconfig.cobbleraiddens-client.title": "Cobblemon Raid Dens Config",
-  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_one": "Tier One Beacon",
-  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_two": "Tier Two Beacon",
-  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_three": "Tier Three Beacon",
-  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_four": "Tier Four Beacon",
-  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_five": "Tier Five Beacon",
-  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_six": "Tier Six Beacon",
-  "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_seven": "Tier Seven Beacon"
+    "advancement.cobblemonraiddens.great_friend.title": "The Great Friend",
+    "advancement.cobblemonraiddens.great_friend.description": "Use one of each Cheer.",
+    "advancement.cobblemonraiddens.join_raid.title": "Cobblemon Raid Dens",
+    "advancement.cobblemonraiddens.join_raid.description": "Join your first raid.",
+    "advancement.cobblemonraiddens.raid_dynamax.title": "A Dynamax Adventure",
+    "advancement.cobblemonraiddens.raid_dynamax.description": "Defeat a dynamax raid.",
+    "advancement.cobblemonraiddens.raid_mega.title": "Overflowing With Power",
+    "advancement.cobblemonraiddens.raid_mega.description": "Defeat a mega raid.",
+    "advancement.cobblemonraiddens.raid_shiny.title": "A Sparkling Success",
+    "advancement.cobblemonraiddens.raid_shiny.description": "Receive a shiny from a raid.",
+    "advancement.cobblemonraiddens.raid_tera.title": "The Treasure of Area Zero",
+    "advancement.cobblemonraiddens.raid_tera.description": "Defeat a tera raid.",
+    "advancement.cobblemonraiddens.tier_one.title": "First Steps",
+    "advancement.cobblemonraiddens.tier_one.description": "Defeat a tier one raid.",
+    "advancement.cobblemonraiddens.tier_two.title": "Raid Buddy",
+    "advancement.cobblemonraiddens.tier_two.description": "Defeat a tier two raid.",
+    "advancement.cobblemonraiddens.tier_three.title": "A Formidable Foe",
+    "advancement.cobblemonraiddens.tier_three.description": "Defeat a tier three raid.",
+    "advancement.cobblemonraiddens.tier_four.title": "Raid Veteran",
+    "advancement.cobblemonraiddens.tier_four.description": "Defeat a tier four raid.",
+    "advancement.cobblemonraiddens.tier_five.title": "Raid Master",
+    "advancement.cobblemonraiddens.tier_five.description": "Defeat a tier five raid.",
+    "advancement.cobblemonraiddens.tier_six.title": "Even Further Beyond",
+    "advancement.cobblemonraiddens.tier_six.description": "Defeat a tier six raid.",
+    "advancement.cobblemonraiddens.tier_seven.title": "The Mightiest",
+    "advancement.cobblemonraiddens.tier_seven.description": "Defeat a tier seven raid.",
+    "battle.cobblemonraiddens.cheer.cannot": "You have no more cheers left.",
+    "battle.cobblemonraiddens.cheer.cheer_attack": "%1$s cheered with \"Go All Out\"!",
+    "battle.cobblemonraiddens.cheer.cheer_defense": "%1$s cheered with \"Hang tough\"!",
+    "battle.cobblemonraiddens.cheer.cheer_heal": "%1$s cheered with \"Heal up\"!",
+    "battle.cobblemonraiddens.reset.boss": "%1$s cleared its own negative effects!",
+    "battle.cobblemonraiddens.reset.player": "%1$s cleared your positive stat changes!",
+    "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
+    "block.cobblemonraiddens.raid_home_block": "Raid Den Crystal",
+    "cobblemon.battle.heal.bagitemcheerheal": "%1$s restored HP from the Heal Cheer!",
+    "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
+    "error.cobblemonraiddens.invalid_dimension": "Invalid dimension.",
+    "error.cobblemonraiddens.players_in_dimension": "There are still players in that dimension.",
+    "error.cobblemonraiddens.player_in_raid": "You cannot refresh a player that's in the middle of a raid.",
+    "error.cobblemonraiddens.dimension_exist": "You are already hosting another raid. If this is an error, please contact an admin.",
+    "feature.cobblemonraiddens.default": "Regular",
+    "feature.cobblemonraiddens.dynamax": "Dynamax",
+    "feature.cobblemonraiddens.gigantamax": "Gigantamax",
+    "feature.cobblemonraiddens.eternamax": "Eternamax",
+    "feature.cobblemonraiddens.mega": "Mega",
+    "feature.cobblemonraiddens.mega_x": "Mega X",
+    "feature.cobblemonraiddens.mega_y": "Mega Y",
+    "feature.cobblemonraiddens.primal": "Primal",
+    "feature.cobblemonraiddens.tera": "Tera",
+    "feature.cobblemonraiddens.stellar": "Stellar",
+    "item.cobblemonraiddens.raid_pouch": "Raid Pouch",
+    "item.cobblemonraiddens.cheer.tooltip": "Can only be used in Raid Battles",
+    "item.cobblemonraiddens.cheer_attack": "Attack Cheer",
+    "item.cobblemonraiddens.cheer_attack.tooltip": "Raise your party's Atk and Sp. Atk by one stage",
+    "item.cobblemonraiddens.cheer_defense": "Defense Cheer",
+    "item.cobblemonraiddens.cheer_defense.tooltip": "Raise your party's Def and Sp. Def by one stage",
+    "item.cobblemonraiddens.cheer_heal": "Heal Cheer",
+    "item.cobblemonraiddens.cheer_heal.tooltip": "Restores 50% HP for your party",
+    "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
+    "message.cobblemonraiddens.command.refresh_player": "%s has been refreshed.",
+    "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
+    "message.cobblemonraiddens.command.remove_dimension": "Rain dimension has been removed.",
+    "message.cobblemonraiddens.raid.accepted_request": "Your request has been accepted.",
+    "message.cobblemonraiddens.raid.already_hosting": "You are already hosting another raid.",
+    "message.cobblemonraiddens.raid.already_in_queue": "You are already waiting to join a raid.",
+    "message.cobblemonraiddens.raid.already_participating": "You are already participating in another raid.",
+    "message.cobblemonraiddens.raid.confirm_accept_request": "You have accepted the join request.",
+    "message.cobblemonraiddens.raid.confirm_deny_request": "You have rejected the join request.",
+    "message.cobblemonraiddens.raid.forbidden_item": "You cannot use items in a raid battle.",
+    "message.cobblemonraiddens.raid.forbidden_move": "%s cannot be selected in a raid battle.",
+    "message.cobblemonraiddens.raid.has_fainted": "You have already fainted!",
+    "message.cobblemonraiddens.raid.is_not_active": "The raid den is not active right now.",
+    "message.cobblemonraiddens.raid.lobby_is_full": "This lobby is already full!",
+    "message.cobblemonraiddens.raid.not_participating": "You have not registered for the raid. Leave and rejoin the lobby.",
+    "message.cobblemonraiddens.raid.player_cleared": "You have already cleared this raid.",
+    "message.cobblemonraiddens.raid.raid_catch": " [CATCH]",
+    "message.cobblemonraiddens.raid.raid_fail": "The raid boss was too strong!",
+    "message.cobblemonraiddens.raid.raid_leave": " [LEAVE]",
+    "message.cobblemonraiddens.raid.raid_success": "You have successfully defeated the raid boss!",
+    "message.cobblemonraiddens.raid.rejected_request": "%s has rejected your join request.",
+    "message.cobblemonraiddens.raid.request_accept": " [ACCEPT]",
+    "message.cobblemonraiddens.raid.request_deny": " [DENY]",
+    "message.cobblemonraiddens.raid.request_time_out": "The join request has timed out.",
+    "message.cobblemonraiddens.raid.request_to_join": "%s has requested to join the raid.",
+    "message.cobblemonraiddens.reward.already_received_reward": "You have already claimed the rewards.",
+    "message.cobblemonraiddens.reward.reward_item": "You have received the reward!",
+    "message.cobblemonraiddens.reward.reward_not_pokeball": "You need to hold a Pokeball to claim the Pokemon.",
+    "message.cobblemonraiddens.reward.reward_pokemon": "You have received the Pokemon!",
+    "stat.cobblemonraiddens.raids_hosted": "Raid Dens Hosted",
+    "stat.cobblemonraiddens.raids_joined": "Raid Dens Joined",
+    "stat.cobblemonraiddens.raids_completed": "Raid Dens Completed",
+    "stat.cobblemonraiddens.tier_one_completed": "Tier One Raids Completed",
+    "stat.cobblemonraiddens.tier_two_completed": "Tier Two Raids Completed",
+    "stat.cobblemonraiddens.tier_three_completed": "Tier Three Raids Completed",
+    "stat.cobblemonraiddens.tier_four_completed": "Tier Four Raids Completed",
+    "stat.cobblemonraiddens.tier_five_completed": "Tier Five Raids Completed",
+    "stat.cobblemonraiddens.tier_six_completed": "Tier Six Raids Completed",
+    "stat.cobblemonraiddens.tier_seven_completed": "Tier Seven Raids Completed",
+    "tag.item.cobblemonraiddens.raid_den_keys": "Raid Den Key",
+    "text.autoconfig.cobbleraiddens-client.title": "Cobblemon Raid Dens Config",
+    "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_one": "Tier One Beacon",
+    "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_two": "Tier Two Beacon",
+    "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_three": "Tier Three Beacon",
+    "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_four": "Tier Four Beacon",
+    "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_five": "Tier Five Beacon",
+    "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_six": "Tier Six Beacon",
+    "text.autoconfig.cobbleraiddens-client.option.show_beam_tier_seven": "Tier Seven Beacon"
 }
