Improved error messages

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -38,7 +38,7 @@
     "error.cobblemonraiddens.invalid_dimension": "Invalid dimension.",
     "error.cobblemonraiddens.players_in_dimension": "There are still players in that dimension.",
     "error.cobblemonraiddens.player_in_raid": "You cannot refresh a player that's in the middle of a raid.",
-    "error.cobblemonraiddens.dimension_exist": "You are already hosting another raid. If this is an error, please contact an admin.",
+    "error.cobblemonraiddens.dimension_exist": "You are already hosting another raid. If this is an error, use /crd refresh or contact an admin.",
     "feature.cobblemonraiddens.default": "Regular",
     "feature.cobblemonraiddens.dynamax": "Dynamax",
     "feature.cobblemonraiddens.gigantamax": "Gigantamax",
@@ -62,9 +62,9 @@
     "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
     "message.cobblemonraiddens.command.remove_dimension": "Rain dimension has been removed.",
     "message.cobblemonraiddens.raid.accepted_request": "Your request has been accepted.",
-    "message.cobblemonraiddens.raid.already_hosting": "You are already hosting another raid.",
+    "message.cobblemonraiddens.raid.already_hosting": "You are already hosting another raid. If this is an error, use /crd refresh or contact an admin.",
     "message.cobblemonraiddens.raid.already_in_queue": "You are already waiting to join a raid.",
-    "message.cobblemonraiddens.raid.already_participating": "You are already participating in another raid.",
+    "message.cobblemonraiddens.raid.already_participating": "You are already participating in another raid.. If this is an error, use /crd refresh or contact an admin.",
     "message.cobblemonraiddens.raid.confirm_accept_request": "You have accepted the join request.",
     "message.cobblemonraiddens.raid.confirm_deny_request": "You have rejected the join request.",
     "message.cobblemonraiddens.raid.forbidden_item": "You cannot use items in a raid battle.",
