Added gui for joining and leaving raids

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -34,6 +34,7 @@
     "battle.cobblemonraiddens.reset.player": "%1$s cleared your positive stat changes!",
     "block.cobblemonraiddens.raid_crystal_block": "Raid Den Crystal",
     "block.cobblemonraiddens.raid_home_block": "Raid Den Crystal",
+    "category.cobblemonraiddens.raid_dens": "Raid Dens",
     "cobblemon.battle.heal.bagitemcheerheal": "%1$s restored HP from the Heal Cheer!",
     "config.jade.plugin_cobblemonraiddens.raid_crystal": "Raid Den",
     "error.cobblemonraiddens.invalid_dimension": "Invalid dimension.",
@@ -59,6 +60,9 @@
     "item.cobblemonraiddens.cheer_heal": "Heal Cheer",
     "item.cobblemonraiddens.cheer_heal.tooltip": "Restores 50% HP for your party",
     "itemgroup.cobblemonraiddens.raid_den_tab": "Raid Dens",
+    "key.cobblemonraiddens.accept": "Accept Shortcut",
+    "key.cobblemonraiddens.deny": "Deny Shortcut",
+    "key.cobblemonraiddens.mouse": "Show Mouse",
     "message.cobblemonraiddens.command.refresh_player": "%s has been refreshed.",
     "message.cobblemonraiddens.command.reset_clears": "Successfully reset clears.",
     "message.cobblemonraiddens.command.remove_dimension": "Rain dimension has been removed.",
@@ -88,6 +92,15 @@
     "message.cobblemonraiddens.reward.reward_item": "You have received the reward!",
     "message.cobblemonraiddens.reward.reward_not_pokeball": "You need to hold a Pokeball to claim the Pokemon.",
     "message.cobblemonraiddens.reward.reward_pokemon": "You have received the Pokemon!",
+    "screen.cobblemonraiddens.raid.title.1": "Raid In",
+    "screen.cobblemonraiddens.raid.title.2": "Progress",
+    "screen.cobblemonraiddens.raid.button": "Leave",
+    "screen.cobblemonraiddens.request.title": "Join Request",
+    "screen.cobblemonraiddens.request.accept": "Accept",
+    "screen.cobblemonraiddens.request.deny": "Deny",
+    "screen.cobblemonraiddens.reward.title": "Reward",
+    "screen.cobblemonraiddens.reward.pokemon": "Pokemon",
+    "screen.cobblemonraiddens.reward.item": "Items Only",
     "stat.cobblemonraiddens.raids_hosted": "Raid Dens Hosted",
     "stat.cobblemonraiddens.raids_joined": "Raid Dens Joined",
     "stat.cobblemonraiddens.raids_completed": "Raid Dens Completed",
