Added reward and request popup screens

--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -92,15 +92,19 @@
     "message.cobblemonraiddens.reward.reward_item": "You have received the reward!",
     "message.cobblemonraiddens.reward.reward_not_pokeball": "You need to hold a Pokeball to claim the Pokemon.",
     "message.cobblemonraiddens.reward.reward_pokemon": "You have received the Pokemon!",
+    "screen.cobblemonraiddens.raid.title": "Raid In Progress",
     "screen.cobblemonraiddens.raid.title.1": "Raid In",
     "screen.cobblemonraiddens.raid.title.2": "Progress",
     "screen.cobblemonraiddens.raid.button": "Leave",
-    "screen.cobblemonraiddens.request.title": "Join Request",
+    "screen.cobblemonraiddens.request.title": "New Join Request!",
+    "screen.cobblemonraiddens.request.description": "%s has requested to join the raid.",
     "screen.cobblemonraiddens.request.accept": "Accept",
     "screen.cobblemonraiddens.request.deny": "Deny",
-    "screen.cobblemonraiddens.reward.title": "Reward",
-    "screen.cobblemonraiddens.reward.pokemon": "Pokemon",
-    "screen.cobblemonraiddens.reward.item": "Items Only",
+    "screen.cobblemonraiddens.reward.title": "Raid Success!",
+    "screen.cobblemonraiddens.reward.description.1": "Would you like to catch the Pokemon?",
+    "screen.cobblemonraiddens.reward.description.2": "The Pokemon disappeared...",
+    "screen.cobblemonraiddens.reward.pokemon": "Catch",
+    "screen.cobblemonraiddens.reward.item": "Leave",
     "stat.cobblemonraiddens.raids_hosted": "Raid Dens Hosted",
     "stat.cobblemonraiddens.raids_joined": "Raid Dens Joined",
     "stat.cobblemonraiddens.raids_completed": "Raid Dens Completed",
