--- a/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
+++ b/common/src/main/resources/assets/cobblemonraiddens/lang/en_us.json
@@ -105,6 +105,7 @@
     "screen.cobblemonraiddens.reward.description.2": "The Pokemon disappeared...",
     "screen.cobblemonraiddens.reward.pokemon": "Catch",
     "screen.cobblemonraiddens.reward.item": "Leave",
+    "screen.cobblemonraiddens.footer": "ALT: Mouse Mode",
     "stat.cobblemonraiddens.raids_hosted": "Raid Dens Hosted",
     "stat.cobblemonraiddens.raids_joined": "Raid Dens Joined",
     "stat.cobblemonraiddens.raids_completed": "Raid Dens Completed",
